tests/ui/binding/ambiguity-item.stderr
error[E0659]: `f` is ambiguous
  --> $DIR/ambiguity-item.rs:14:13
   |
LL |     let v = f;
   |             ^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `f` could refer to the function imported here
  --> $DIR/ambiguity-item.rs:6:5
   |
LL | use m::*;
   |     ^^^^
   = help: consider adding an explicit import of `f` to disambiguate
note: `f` could also refer to the function imported here
  --> $DIR/ambiguity-item.rs:11:5
   |
LL | use n::*; // OK, no conflict with `use m::*;`
   |     ^^^^
   = help: consider adding an explicit import of `f` to disambiguate

error[E0659]: `f` is ambiguous
  --> $DIR/ambiguity-item.rs:16:9
   |
LL |         f => {}
   |         ^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `f` could refer to the function imported here
  --> $DIR/ambiguity-item.rs:6:5
   |
LL | use m::*;
   |     ^^^^
   = help: consider adding an explicit import of `f` to disambiguate
note: `f` could also refer to the function imported here
  --> $DIR/ambiguity-item.rs:11:5
   |
LL | use n::*; // OK, no conflict with `use m::*;`
   |     ^^^^
   = help: consider adding an explicit import of `f` to disambiguate

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0659`.
